add annotations to the rest of folder tests